--- a/historyflood/index.html
+++ b/historyflood/index.html
@@ -61,7 +61,7 @@
                 for (var i = 1; i <= num; i++) {
                     history.pushState(0, 0, i === num ? url : i.toString());
                 }
-                alert("Flooding Successful! " + url + " is now in your history " + num + " times.");
+                alert("✅ Flooding Successful! \n" + url + " is now in your history " + num + " times.");
             }, 2000);
         }
     </script>
