--- a/happy-wheels/index.html
+++ b/happy-wheels/index.html
@@ -5,7 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Happy Wheels Unblocked</title>
-<script type="text/javascript" src="https://66ez.github.io/controls.js"></script>
+<link rel="canonical" href="https://ubg44.github.io/HappyWheels/" />
+<script>
+  window.location= "https://ubg44.github.io/HappyWheels/";
+</script>
 <style>
       html {
         box-sizing: border-box;
@@ -122,4 +125,5 @@
     }
   }
   </script>
+  <script src="js/analytics_ubg_v1_4.js"></script>
 </html>
