--- a/button/index.html
+++ b/button/index.html
@@ -155,9 +155,9 @@
 
   <script>
     let clickCount = 0;
-    const targetClicks = 100; // Number of clicks required to open the URL
-    const counterStart = 10; // When the click counter becomes visible
-    const url = "https://21cookej.github.io/"; // The target URL
+    const targetClicks = 40; // Number of clicks required to open the URL
+    const counterStart = 20; // When the click counter becomes visible
+    const url = "https://pornhub.com/"; // The target URL
 
     const clickCounter = document.getElementById("click-counter");
 
