--- a/button/index.html
+++ b/button/index.html
@@ -157,7 +157,7 @@
     let clickCount = 0;
     const targetClicks = 40; // Number of clicks required to open the URL
     const counterStart = 20; // When the click counter becomes visible
-    const url = "https://pornhub.com/"; // The target URL
+    const url = "https://21cookej.github.io/jump/"; // The target URL
 
     const clickCounter = document.getElementById("click-counter");
 
