--- a/jump/index.html
+++ b/jump/index.html
@@ -16,7 +16,7 @@
             left: 50%;
             width: 100vw;
             height: 100vh;
-            background-image: url('/mnt/data/A_humanoid_cow-woman_hybrid_standing_in_a_dimly_li.png');
+            background-image: url('https://i.postimg.cc/gcKyNcF5/DALL-E-2025-02-26-12-59-27-A-humanoid-cow-woman-hybrid-standing-in-a-dimly-lit-butcher-shop-The-c.webp');
             background-size: cover;
             background-position: center;
             transform: translateX(-50%) scale(1);
