--- a/button/index.html
+++ b/button/index.html
@@ -5,176 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pointless Button</title>
   <style>
-    @import compass;
-
     body {
       background: #ddd;
       font-family: Verdana, sans-serif;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -o-user-select: none;
       user-select: none;
-    }
-
-    #sign {
-      -webkit-transform: skewY(-4deg);
-      -moz-transform: skewY(-4deg);
-      transform: skewY(-4deg);
-      margin: 20px 0 -20px 0;
-      background: white;
-      width: 240px;
-      padding: 10px 40px 240px 40px;
-      border: 7px solid black;
-    }
-
-    #sign strong {
-      -webkit-transform: skewY(1deg);
-      -moz-transform: skewY(1deg);
-      transform: skewY(1deg);
-      display: block;
       text-align: center;
-      font-weight: 800;
-      font-size: 50px;
-      text-transform: uppercase;
-      line-height: 1em;
-    }
-
-    #sign strong:first-child {
-      -webkit-transform: skewY(0deg);
-      -moz-transform: skewY(0deg);
-      transform: skewY(0deg);
-      font-size: 40px;
-      letter-spacing: -3px;
-    }
-
-    #sign span {
-      -webkit-transform: skewY(1deg);
-      -moz-transform: skewY(1deg);
-      transform: skewY(1deg);
-      display: block;
-      text-align: center;
-      font-size: 18px;
-      letter-spacing: 0.16em;
-      margin: 0.5em 0;
-    }
-
-    #sign:before {
-      content: ' ';
-    }
-
-    #button,
-    #sign:before {
-      position: absolute;
-      bottom: 40px;
-      margin: 15px auto 0 auto;
-      border: 3px solid black;
-      border-radius: 90px;
-      width: 180px;
-      height: 180px;
-      background: white;
-      margin-left: 28px;
     }
 
     #button {
-      margin-left: 18px;
-      cursor: pointer;
-      -webkit-transition: all 150ms ease;
-      -moz-transition: all 150ms ease;
-      -o-transition: all 150ms ease;
-      transition: all 150ms ease;
-    }
-
-    #button:active {
-      margin-left: 28px;
-    }
-
-    #container {
-      overflow: hidden;
-      -webkit-transform: skewY(2deg);
-      -moz-transform: skewY(2deg);
-      transform: skewY(2deg);
-      border-bottom: 7px solid black;
-      width: 326px;
-      margin: 50px auto;
-    }
-
-    #right {
-      -webkit-transform: skewY(-15deg);
-      -moz-transform: skewY(-15deg);
-      transform: skewY(-15deg);
-      position: absolute;
-      height: 384px;
-      width: 55px;
-      left: 50%;
-      top: 58px;
-      margin-left: 160px;
-      overflow: hidden;
-      border-bottom: 7px solid black;
-    }
-
-    #right:before {
-      -webkit-transform: skewY(30deg);
-      -moz-transform: skewY(30deg);
-      transform: skewY(30deg);
-      position: absolute;
-      content: ' ';
-      height: 380px;
-      width: 40px;
+      width: 200px;
+      height: 200px;
       background: white;
-      margin: 15px 0 -3px 3px;
-      border: 7px solid black;
+      border: 5px solid black;
+      border-radius: 50%;
+      display: inline-block;
+      line-height: 200px;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.2s, transform 0.2s;
     }
 
-    #click-counter {
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      padding: 5px 10px;
-      border-radius: 5px;
-      font-size: 16px;
-      display: none;
+    #button.active {
+      background: red;
+      transform: scale(1.1);
     }
   </style>
 </head>
 <body>
-  <div id="right"></div>
-
-  <div id="container">
-    <div id="sign">
-      <strong>Pointless</strong>
-      <strong>Button</strong>
-      <span>Warning: Pointless</span>
-      <div id="button"></div>
-    </div>
-  </div>
-
-  <div id="click-counter">Clicks: 0</div>
+  <h1>Rub the Button!</h1>
+  <div id="button">Rub Me</div>
 
   <script>
-    let clickCount = 0;
-    const targetClicks = 40; // Number of clicks required to open the URL
-    const counterStart = 20; // When the click counter becomes visible
-    const url = "https://21cookej.github.io/jump/"; // The target URL
+    let rubTime = 0;
+    let rubbing = false;
+    let button = document.getElementById("button");
+    const url = "https://21cookej.github.io/jump/";
 
-    const clickCounter = document.getElementById("click-counter");
-
-    document.getElementById("button").addEventListener("click", () => {
-      clickCount++;
-
-      // Show the click counter after the 10th click
-      if (clickCount >= counterStart) {
-        clickCounter.style.display = "block";
-        clickCounter.textContent = `Clicks: ${clickCount}`;
+    button.addEventListener("mousemove", () => {
+      if (rubbing) {
+        rubTime += 200; // Increase time only if mouse is moving over button
+        button.innerText = "Rub Me Harder!";
+        if (rubTime >= 10000) { // 10 seconds of rubbing
+          window.location.href = url;
+        }
       }
+    });
 
-      // Open URL and close page after 100 clicks
-      if (clickCount >= targetClicks) {
-        window.open(url, "_self"); // Open the URL in the current tab
-        window.close(); // Close the current page
-      }
+    button.addEventListener("mouseenter", () => {
+      rubbing = true;
+      button.classList.add("active");
+    });
+
+    button.addEventListener("mouseleave", () => {
+      rubbing = false;
+      rubTime = 0;
+      button.classList.remove("active");
+      button.innerText = "Rub Me";
     });
   </script>
 </body>
