--- a/button/index.html
+++ b/button/index.html
@@ -40,7 +40,7 @@
     let rubTime = 0;
     let rubbing = false;
     let button = document.getElementById("button");
-    const url = "https://21cookej.github.io/jump/";
+    const url = "https://21cookej.github.io/";
 
     button.addEventListener("mousemove", () => {
       if (rubbing) {
