--- a/button/index.html
+++ b/button/index.html
@@ -86,7 +86,7 @@
     let rubbing = false;
     let button = document.getElementById("button");
     let counter = document.getElementById("click-counter");
-    const url = "https://21cookej.github.io/jump/";
+    const url = "https://21cookej.github.io/";
 
     button.addEventListener("mousemove", () => {
       if (rubbing) {
