--- a/button/index.html
+++ b/button/index.html
@@ -9,91 +9,139 @@
       background: #ddd;
       font-family: Verdana, sans-serif;
       user-select: none;
-      text-align: center;
-    }
-
-    #container {
-      margin-top: 50px;
     }
 
     #sign {
-      display: inline-block;
+      transform: skewY(-4deg);
+      margin: 20px 0 -20px 0;
       background: white;
       width: 240px;
       padding: 10px 40px 240px 40px;
       border: 7px solid black;
-      text-align: center;
     }
 
     #sign strong {
+      transform: skewY(1deg);
       display: block;
+      text-align: center;
       font-weight: 800;
       font-size: 50px;
       text-transform: uppercase;
       line-height: 1em;
     }
 
+    #sign strong:first-child {
+      transform: skewY(0deg);
+      font-size: 40px;
+      letter-spacing: -3px;
+    }
+
     #sign span {
+      transform: skewY(1deg);
       display: block;
+      text-align: center;
       font-size: 18px;
       letter-spacing: 0.16em;
       margin: 0.5em 0;
     }
 
-    #button {
-      position: relative;
-      display: inline-block;
+    #sign:before {
+      content: ' ';
+    }
+
+    #button,
+    #sign:before {
+      position: absolute;
+      bottom: 40px;
+      margin: 15px auto 0 auto;
+      border: 3px solid black;
+      border-radius: 90px;
       width: 180px;
       height: 180px;
       background: white;
-      border: 3px solid black;
-      border-radius: 90px;
-      margin-top: 30px;
+      margin-left: 28px;
+    }
+
+    #button {
+      margin-left: 18px;
       cursor: pointer;
-      font-size: 18px;
-      font-weight: bold;
-      line-height: 180px;
-      transition: background 0.2s, transform 0.2s;
+      transition: all 150ms ease;
     }
 
-    #button.active {
-      background: red;
-      transform: scale(1.1);
+    #button:active {
+      margin-left: 28px;
     }
 
-    #click-counter {
-      margin-top: 10px;
+    #container {
+      overflow: hidden;
+      transform: skewY(2deg);
+      border-bottom: 7px solid black;
+      width: 326px;
+      margin: 50px auto;
+    }
+
+    #right {
+      transform: skewY(-15deg);
+      position: absolute;
+      height: 384px;
+      width: 55px;
+      left: 50%;
+      top: 58px;
+      margin-left: 160px;
+      overflow: hidden;
+      border-bottom: 7px solid black;
+    }
+
+    #right:before {
+      transform: skewY(30deg);
+      position: absolute;
+      content: ' ';
+      height: 380px;
+      width: 40px;
+      background: white;
+      margin: 15px 0 -3px 3px;
+      border: 7px solid black;
+    }
+
+    #rub-counter {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
       font-size: 16px;
       display: none;
     }
   </style>
 </head>
 <body>
+  <div id="right"></div>
 
   <div id="container">
     <div id="sign">
       <strong>Pointless</strong>
       <strong>Button</strong>
       <span>Warning: Pointless</span>
-      <div id="button">Rub Me</div>
+      <div id="button"></div>
     </div>
   </div>
 
-  <div id="click-counter">Rub Time: 0s</div>
+  <div id="rub-counter">Rub Time: 0s</div>
 
   <script>
     let rubTime = 0;
     let rubbing = false;
     let button = document.getElementById("button");
-    let counter = document.getElementById("click-counter");
-    const url = "https://21cookej.github.io/";
+    let rubCounter = document.getElementById("rub-counter");
+    const url = "https://21cookej.github.io/jump/";
 
     button.addEventListener("mousemove", () => {
       if (rubbing) {
-        rubTime += 100; // Increase time while moving
-        button.innerText = "Rub Me Harder!";
-        counter.style.display = "block";
-        counter.textContent = `Rub Time: ${(rubTime / 1000).toFixed(1)}s`;
+        rubTime += 100; // Increase time while rubbing
+        rubCounter.style.display = "block";
+        rubCounter.textContent = `Rub Time: ${(rubTime / 1000).toFixed(1)}s`;
 
         if (rubTime >= 10000) { // 10 seconds of rubbing
           window.location.href = url;
@@ -103,15 +151,12 @@
 
     button.addEventListener("mouseenter", () => {
       rubbing = true;
-      button.classList.add("active");
     });
 
     button.addEventListener("mouseleave", () => {
       rubbing = false;
       rubTime = 0;
-      button.classList.remove("active");
-      button.innerText = "Rub Me";
-      counter.style.display = "none";
+      rubCounter.style.display = "none";
     });
   </script>
 
