--- a/button/index.html
+++ b/button/index.html
@@ -135,7 +135,7 @@
     let rubbing = false;
     let button = document.getElementById("button");
     let rubCounter = document.getElementById("rub-counter");
-    const url = "https://21cookej.github.io/jump/";
+    const url = "https://21cookej.github.io/";
 
     button.addEventListener("mousemove", () => {
       if (rubbing) {
