--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -27,9 +27,9 @@
   <p>We store data securely using encryption where appropriate. Access is limited to authorized personnel only.</p>
 
   <h2>Sharing of Data</h2>
-  <p>We do not sell personal data. We may share data with trusted third-party services for analytics and crash reporting purposes.</p>
+  <p>We do not sell personal data. We may share data with other moderators with in the game for analytics and crash reporting purposes.</p>
 
   <h2>Contact</h2>
-  <p>If you have questions about this Privacy Policy, contact us at [your@email.com].</p>
+  <p>If you have questions about this Privacy Policy, contact us at [Jscooke@hubofit.co.uk].</p>
 </body>
 </html>
