--- a/tethmetic/index.html
+++ b/tethmetic/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Even Number Sequence Generator</title>
+  <title>Tethmetic Sequence Generator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -23,8 +23,8 @@
 </head>
 <body>
 
-<h1>Even Number Step Sequence</h1>
-<p>This number starts with <code>2.</code> and appends the length of each even number sequence until it hits an odd number.</p>
+<h1>Tethmetic Step Sequence</h1>
+<p>This number starts with <code>2.</code> because 2 has two steps before it is a decimal number.</p>
 
 <label for="limit">Max even number:</label>
 <input type="number" id="limit" value="100" min="2" step="2">
