--- a/coin-crusade/index.html
+++ b/coin-crusade/index.html
@@ -1,6 +1,25 @@
-<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="MWMgWWg" data-pen-title="Coin Crusade" data-user="James-Cooke-the-typescripter" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/James-Cooke-the-typescripter/pen/MWMgWWg">
-  Coin Crusade</a> by James Cooke (<a href="https://codepen.io/James-Cooke-the-typescripter">@James-Cooke-the-typescripter</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://public.codepenassets.com/embed/index.js"></script>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Coin Crusade</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<html lang="en" >
+<head>
+<meta charset="UTF-8">
+<title>CodePen - game</title><link rel="stylesheet" href="./style.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<h2>Simple JavaScript Game</h2><img src="https://see.fontimg.com/api/renderfont4/x3BLm/eyJyIjoiZnMiLCJoIjo2MiwidyI6MTAwMCwiZnMiOjYyLCJmZ2MiOiIjRkZDRDI2IiwiYmdjIjoiIzBFMDAwMCIsInQiOjF9/Q29pbiBDcnVzYWRl/stepalange.png" alt="Description of image">
+<script>src="./script.js"</script></body>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
