--- a/lethal-runners/index.html
+++ b/lethal-runners/index.html
@@ -77,6 +77,7 @@
 
   <section class="gallery">
     <img src="https://i.ibb.co/bMNM222W/Forest.png" alt="Lethal Runners Forest Map">
+    <img src="https://i.postimg.cc/tTGMQ8vQ/Screenshot-2025-05-09-221201.png" alt="Lethal Runners Cave Map">
   </section>
 
   <section class="content">
