--- a/pixel/index.html
+++ b/pixel/index.html
@@ -3,42 +3,20 @@
 <head>
   <!--v0.4-->
   <title>SANDTRIS</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+  <script src="https://21cookej.github.io/pixel/p5.js"></script>
+  <script src="https://21cookej.github.io/pixel/p5.sound.min.js"></script>
   <script src="sketch.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://21cookej.github.io/pixel/font-awesome.min.css">
 </head>
 <body>
   <!-- Header Title -->
    <div id="sandtrislogo">
   	<h1 >SANDTRIS</h1>
 	</div>
-  
-  <div id="main2">
-    <!-- Ads - Left Column -->
-    <div class="adsbox">
-      ads!
-      <div class="ad">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9200311124038960" crossorigin="anonymous"></script>
-        <!-- top sandtris ad -->
-        <ins class="adsbygoogle" style="display:inline-block;width:200px;height:310px" data-ad-client="ca-pub-9200311124038960" data-ad-slot="4677385647"></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
-      <div class="ad">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9200311124038960" crossorigin="anonymous"></script>
-        <!-- bottom sandtris ad -->
-        <ins class="adsbygoogle" style="display:inline-block;width:200px;height:310px" data-ad-client="ca-pub-9200311124038960" data-ad-slot="1316725130"></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
-    </div>
 
     <!-- Game Canvas - Middle Column -->
     <div id="cnv">
