--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>Last updated: April 15, 2025</p>
+  <p>Last updated: May 18, 2025</p>
 
   <p>This Privacy Policy explains how our VR app collects, uses, and protects your data.</p>
 
@@ -14,6 +14,7 @@
     <li>User-generated content (e.g., usernames, chat messages)</li>
     <li>Device and usage data (e.g., headset model, crash logs)</li>
     <li>Interaction data (e.g., in-app behavior, hand tracking, microphone input if applicable)</li>
+    <li>Age of users getting the app</li>
   </ul>
 
   <h2>How We Use Your Data</h2>
@@ -21,6 +22,7 @@
     <li>To improve app functionality and user experience</li>
     <li>To analyze usage and performance</li>
     <li>To ensure user safety and prevent abuse</li>
+    <li>To esure that the game is suitable for that age range</li>
   </ul>
 
   <h2>Data Storage and Security</h2>
@@ -28,6 +30,7 @@
 
   <h2>Sharing of Data</h2>
   <p>We do not sell personal data. We may share data with other moderators with in the game for analytics and crash reporting purposes.</p>
+  <p>We Only share users data to playfab to provided management for item.s</p>
 
   <h2>Contact</h2>
   <p>If you have questions about this Privacy Policy, contact us at [Jscooke@hubofit.co.uk].</p>
