--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -4,7 +4,7 @@
   <title>Privacy Policy</title>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
+  <h1>Privacy Policy for the Organization Death Tag</h1>
   <p>Last updated: May 18, 2025</p>
 
   <p>This Privacy Policy explains how our VR app collects, uses, and protects your data.</p>
