--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -4,8 +4,8 @@
   <title>Privacy Policy</title>
 </head>
 <body>
-  <h1>Privacy Policy for the Organization Death Tag</h1>
-  <p>Last updated: May 18, 2025</p>
+  <h1>Privacy Policy for the Organization Lethal Runners</h1>
+  <p>Last updated: May 19, 2025</p>
 
   <p>This Privacy Policy explains how our VR app collects, uses, and protects your data.</p>
 
@@ -14,7 +14,7 @@
     <li>User-generated content (e.g., usernames, chat messages)</li>
     <li>Device and usage data (e.g., headset model, crash logs)</li>
     <li>Interaction data (e.g., in-app behavior, hand tracking, microphone input if applicable)</li>
-    <li>Age of users getting the app</li>
+    <li>Age of users accessing the app</li>
   </ul>
 
   <h2>How We Use Your Data</h2>
@@ -22,17 +22,21 @@
     <li>To improve app functionality and user experience</li>
     <li>To analyze usage and performance</li>
     <li>To ensure user safety and prevent abuse</li>
-    <li>To esure that the game is suitable for that age range</li>
+    <li>To ensure that the game is suitable for the intended age range</li>
   </ul>
 
   <h2>Data Storage and Security</h2>
   <p>We store data securely using encryption where appropriate. Access is limited to authorized personnel only.</p>
 
   <h2>Sharing of Data</h2>
-  <p>We do not sell personal data. We may share data with other moderators with in the game for analytics and crash reporting purposes.</p>
-  <p>We Only share users data to playfab to provided management for item.s</p>
+  <p>We do not sell personal data. We may share data with in-game moderators for analytics and crash reporting purposes.</p>
+  <p>We only share user data with PlayFab to provide item management services.</p>
+  
+  <h2>Disposal of Data</h2>
+  <p>Users can request that their game data be deleted, clearing all history except ban history to prevent abuse of the system.</p>
+  <p>Data will be automatically deleted after a period of 3 months of inactivity, including ban data.</p>
 
   <h2>Contact</h2>
-  <p>If you have questions about this Privacy Policy, contact us at [Jscooke@hubofit.co.uk].</p>
+  <p>If you have questions about this Privacy Policy, contact us at <a href="mailto:Jscooke@hubofit.co.uk">Jscooke@hubofit.co.uk</a>.</p>
 </body>
 </html>
