--- a/lethal-runners/index.html
+++ b/lethal-runners/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Lethal Runners</title>
-  <link rel="icon" type="image/png" src="https://i.postimg.cc/J0hfHkpt/pixil-frame-0-33.png">
+  <link rel="icon" type="image/png" href="https://i.postimg.cc/J0hfHkpt/pixil-frame-0-33.png">
   <link rel="stylesheet" href="style.css">
   <style>
     html, body {
