--- a/lethal-runners/index.html
+++ b/lethal-runners/index.html
@@ -242,6 +242,7 @@
     <img src="https://i.ibb.co/bMvmD1zQ/Screenshot-2025-04-15-163927.png" alt="Player with Crown Cosmetic">
     <img src="https://i.postimg.cc/Qtg8J1gb/Screenshot-2025-05-31-172105.png" alt="Cave Enter">
     <img src="https://i.postimg.cc/Dz654ymM/Screenshot-2025-05-31-171726.png" alt="UFO Crash">
+     <img src="https://i.postimg.cc/rFYDs68N/Screenshot-2025-05-31-171453.png" alt="More Cosmetics">
     </div>
     </section>
 
