--- a/lethal-runners/index.html
+++ b/lethal-runners/index.html
@@ -62,7 +62,7 @@
     #sidebar ul {
       list-style: none;
       padding: 0;
-      margin-top: 40px;
+      margin-top: 0px;
     }
 
     #sidebar ul li {
@@ -95,9 +95,10 @@
 
   <!-- Sidebar -->
   <div id="sidebar" onmouseleave="closeSidebar()">
-    <h3>Navigation</h3>
     <ul>
+      <li><a href="https://21cookej.github.io/lethal-runners">Main Page</a></li>
       <li><a href="https://21cookej.github.io/privacy-policy">Privacy Policy</a></li>
+      <li><a href="https://21cookej.github.io/details-lethal-runners">Details</a></li>
       
     </ul>
   </div>
@@ -148,7 +149,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lethal Runners VR</title>
+  <title>Lethal Runners</title>
   <style>
     body {
       font-family: Arial, sans-serif;
