--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -227,16 +227,20 @@
 </head>
 <body>
   <h1>Privacy Policy for the Organization Lethal Runners</h1>
-  <p>Last updated: June 9, 2025</p>
+  <p>Last updated: May 19, 2025</p>
 
   <p>This Privacy Policy explains how our VR app collects, uses, and protects your data.</p>
-
+</header>
   <h2>Information We Collect</h2>
   <ul>
     <p>User-generated content (e.g., usernames, chat messages)</p>
     <p>Device and usage data (e.g., headset model, crash logs)</p>
     <p>Interaction data (e.g., in-app behavior, hand tracking, microphone input if applicable)</p>
     <p>Age of users accessing the app</p>
+<!--     <li>User-generated content (e.g., usernames, chat messages)</li>
+    <li>Device and usage data (e.g., headset model, crash logs)</li>
+    <li>Interaction data (e.g., in-app behavior, hand tracking, microphone input if applicable)</li>
+    <li>Age of users accessing the app</li> -->
   </ul>
 
   <h2>How We Use Your Data</h2>
@@ -253,7 +257,7 @@
   <h2>Sharing of Data</h2>
   <p>We do not sell personal data. We may share data with in-game moderators for analytics and crash reporting purposes.</p>
   <p>We only share user data with PlayFab to provide item management services.</p>
-  
+
   <h2>Disposal of Data</h2>
   <p>Users can request that their game data be deleted, clearing all history except ban history to prevent abuse of the system.</p>
   <p>Data will be automatically deleted after a period of 3 months of inactivity, including ban data.</p>
