--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -155,13 +155,14 @@
       font-family: Arial, sans-serif;
       background-color: #222;
       color: #fff;
+      font-size: 1em;
       margin: 0;
       padding: 0;
     }
 
     header {
       background-color: #222;
-      padding: 20px;
+      padding: 0px;
       text-align: center;
     }
 
